syntax = "proto3";

package eventforwarder;

service Status {
  rpc SendRoomStatus(RoomStatus) returns (Response) {}
  rpc SendPlayerStatus(PlayerStatus) returns (Response) {}
}

message RoomStatus {
  string game = 1;
  string roomId = 2;
  string type = 3;
}

message PlayerStatus {
  string game = 1;
  string roomId = 2;
  string type = 3;
  string userId = 4;
}

message Response {
  string message = 1;
}
